# seraph-iris-mods

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md
cortex/: README.md
iris/IrisCustomerTagEnforcer/: README.md  pyproject.toml
iris/IrisCustomerTagEnforcer/src/: __init__.py  enforcer.py  hooks.py
iris/IrisCustomerTagEnforcer/tests/: test_enforcer.py
misp/MispCustomerTagEnforcer/: README.md  pyproject.toml
misp/MispCustomerTagEnforcer/src/: __init__.py  enforcer.py
misp/MispCustomerTagEnforcer/tests/: test_enforcer.py
