[project]
name = "iris-customer-tag-enforcer"
version = "0.1.0"
description = "IRIS plugin: enforce customer:<slug> tag on every case (defense-in-depth)"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
